fix flow-text text overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1733,7 +1733,7 @@ small {
   font-weight: 200; }
 
 .flow-text {
-  font-weight: 300; }
+  font-weight: 300; overflow-y: auto; }
   @media only screen and (min-width: 360px) {
     .flow-text {
       font-size: 1.2rem; } }
