--- a/materialize_subtheme/sass/core/design/_typography.scss
+++ b/materialize_subtheme/sass/core/design/_typography.scss
@@ -100,6 +100,7 @@ small {
 
 .flow-text {
   font-weight: 300;
+  overflow-y: auto;
   $i: 0;
 
   @while $i <= $intervals {
